# SLAG

./: .gitignore  CMakeLists.txt  Makefile  Makefile.mak  README.md  SLAG.sln  cmake.cmd  cmake.sh  makefile
AsyncQueueTest/: AsyncQueueTest.cpp  AsyncQueueTest.vcxproj  AsyncQueueTest.vcxproj.filters
CModules/: CMakeLists.txt  CModules.c  CModules.vcxproj  CModules.vcxproj.filters  def.def  dllmain.cpp
Cat/: Cat.cpp  Cat.vcxproj
Core/: Core.vcxproj  Core.vcxproj.filters  slag_interface.cpp
Core/slag/: slag_interface.h
ImgModules/: AbstractInterface.cpp  AbstractInterface.h  CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  ImgModules.cpp  VideoSource.cpp  VideoSource.h
Konsole/: Konsole.cpp  Konsole.vcxproj  Konsole.vcxproj.filters
MiniSlag/: CMakeLists.txt  MiniSlag.cpp
MyModules/: AbstractInterface.cpp  AbstractInterface.h  AddModule.cpp  AddModule.h  CMakeLists.txt  ImageProcessor.cpp  ImageProcessor.h  KeyReader.cpp  KeyReader.h  MyModules.cpp  MyModules.vcxproj  MyModules.vcxproj.filters  ReadModule.h  VideoSource.cpp  VideoSource.h  def.def  dllmain.cpp
SLAG_winapi/: SLAG_winapi.vcxproj  main.cpp
Slag/: AsyncQueue.h  CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  ExclusiveAccess.h  Factory.cpp  Factory.h  Graph.cpp  Graph.h  HumanReadable.cpp  HumanReadable.h  Imshow.cpp  Imshow.h  InternalTypes.cpp  InternalTypes.h  LoadLibrary.cpp  ModuleIdentifier.cpp  ModuleIdentifier.h  ModuleWrapper.cpp  ModuleWrapper.h  OS_dependent.h  OutputText.cpp  Slag.cpp  Slag.vcxproj  Slag.vcxproj.filters  TerminationSignal.cpp  Timer.cpp  Timer.h
Slag/UNIX/: Console.cpp  Imshow.cpp  LoadLibrary.cpp  OutputText.cpp  TerminationSignal.cpp
Slag/WIN/: Console.cpp  Imshow.cpp  LoadLibrary.cpp  OutputText.cpp  TerminationSignal.cpp
SlagCmd/: Additionals.h  CMakeLists.txt  Console.cpp  Imshow.cpp  OutputText.cpp  Slag.cpp
SlagLib/: CMakeLists.txt  Slag.cpp
SlagLib/Linux/: LoadLibrary.cpp
SlagLib/Windows/: LoadLibrary.cpp
SlagLib/inc/: Factory.h  Graph.h  Identifiers.h  ModuleIdentifier.h  SlagTypes.h  slag_interface.h
SlagLib/inc/slag/: Graph.h  Types.h
SlagLib/src/: Factory.cpp  Factory.h  Graph.cpp  Identifiers.cpp  InternalTypes.h  ModuleIdentifier.cpp  ModuleWrapper.cpp  ModuleWrapper.h  OS_dependent.h
SlagShell/: Additionals.h  CMakeLists.txt  Console.cpp  Imshow.cpp  OutputText.cpp  Slag.cpp
Testing/: ImgProcessor1.cfg  ImgProcessor2.cfg  MultipleModules.cfg  WebCam.cfg  graph.cfg  graph.xml  graphAdd.cfg  graphCAdd.cfg  graphCppAdd.cfg  graphQuit.cfg
WinSlag/: CMakeLists.txt  ConfigReader.cpp  ConfigReader.h  Factory.cpp  Factory.h  Graph.cpp  Graph.h  Imshow.cpp  InternalTypes.h  ModuleIdentifier.cpp  ModuleIdentifier.h  ModuleWrapper.cpp  ModuleWrapper.h  OS_dependent.h  OutputText.cpp  QueueTypes.h  Slag.cpp  WinSlag.cpp
doxy/: config
inc/slag/: slag_interface.h
